# true-patriot-bot

./: Cargo.toml  README.md
docker/: Dockerfile_local  Dockerfile_main
src/: commands.rs  main.rs  message_transformer.rs  parameters.rs  webhook.rs
