[package]
name = "true-patriot-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
axum = "0.5.1"
futures = "0.3.21"
log = "0.4.16"
serde = "1.0.136"
serde_json = "1.0.79"
teloxide = { version = "0.7.3", features = ["auto-send", "macros"] }
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.8"
tower = "0.4.12"
tower-http = { version = "0.2.5", features = ["add-extension", "trace"] }
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.10", features = ["env-filter", "json"] }

[profile.release]
lto = true
